--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.body {
+  @apply bg-slate-100 text-gray-800 dark:bg-gray-900 dark:text-white;
+}
+
 .header {
   @apply bg-gray-100 dark:bg-gray-800 flex items-center justify-between p-8;
 }
@@ -30,27 +34,27 @@
   @apply flex bg-slate-300 justify-center p-4
 }
 
-.table {
-  @apply w-full text-left table-auto border border-gray-300 dark:border-gray-600 rounded-lg overflow-hidden;
+.itemActions {
+  @apply flex flex-col items-center justify-center gap-2;
 }
 
-.table thead {
-  @apply bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-200;
+.itemActions .pencil {
+  @apply w-5 h-5 text-blue-400 cursor-pointer hover:scale-110 hover:opacity-80 hover:shadow-lg;
 }
 
-.table th {
-  @apply px-4 py-2 text-sm font-semibold border-b border-gray-300 dark:border-gray-600;
+.itemActions .trash {
+  @apply w-5 h-5 text-red-500 cursor-pointer hover:scale-110 hover:opacity-80 hover:shadow-lg;
 }
 
-.table tbody tr {
-  @apply odd:bg-white even:bg-gray-100 dark:odd:bg-gray-800 dark:even:bg-gray-700 transition-colors;
+.entity-title {
+  @apply text-xl font-semibold mb-2 dark:text-gray-300 mb-1;
 }
 
-.table td {
-  @apply px-4 py-2 text-sm text-gray-800 dark:text-gray-100 border-b border-gray-200 dark:border-gray-600;
+.address-sub {
+  @apply grid grid-cols-7 gap-3 px-3 py-2 font-bold text-gray-600 dark:text-gray-300 text-center
 }
 
-.table tbody tr:hover {
-  @apply bg-gray-50 dark:bg-gray-600;
+.address-item {
+  @apply grid grid-cols-7 gap-4 bg-slate-800 text-white rounded-2xl px-6 py-4 shadow-md items-center text-center m-5 text-sm
 }
 
